# hydroflow

./: Cargo.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json  updateContentCommand.sh
basen/: Cargo.toml  README.md  TODO.md  joe.md  lattice.md
basen/src/: client.rs  helpers.rs  joe.md  keynode.rs  latless.rs  left_outer_join.hf  main.rs  protocol.rs  segnode.rs
hdfs/: Cargo.toml  README.md  TODO.md  cfg.toml
hdfs/src/: client.rs  datanode.rs  helpers.rs  logger.rs  main.rs  namenode.rs  protocol.rs  server.rs
hydroflow/: Cargo.toml
hydroflow/examples/dbsp/: README.md  left_outer_join.hf  main.rs
hydroflow/examples/echoserver/: protocol.rs  server.rs
hydroflow/tests/: surface_echo.rs
hydroflow_lang/src/graph/ops/: persist.rs  source_file.rs
