[package]
name = "hdfs"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = [ "derive" ] }
# why is this recompiled so often? different features from dependencies?
hydroflow = { path = "../hydroflow" }
serde = { version = "1", features = [ "derive" ] }
# XXX security warning for this dependency; resolve before merge
chrono = { version = "0.4.20", features = [ "serde" ], default-features = true }
tokio = { version = "1.0", features = [ "rt-multi-thread" ] }
tokio-stream = { version = "0.1.10" }
tokio-util = { version = "0.7.4", features = [ "net", "codec" ] }
uuid = { version = "1.3.0", features = [ "serde", "v4" ]}
regex = { version = "1" }
serde_json = { version = "1" }
